<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Winner" >

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:text="@string/winnerText"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/boardLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp" >
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/boardLinearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:layout_weight="0.11"
        android:onClick="backToHome"
        android:text="@string/back2main" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boardLinearLayout"
        android:layout_alignLeft="@+id/boardLinearLayout"
        android:layout_alignRight="@+id/button2"
        android:layout_weight="0.29"
        android:onClick="playAgain"
        android:text="@string/playAgain" />

    <TextView
        android:id="@+id/winnerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="00"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/YourTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/winnerScore"
        android:layout_centerHorizontal="true"
        android:text="@string/yourScore"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>